Add demo dataset and data reset
